Fixed introductory header alignment issue.

--- a/css-styles/home.css
+++ b/css-styles/home.css
@@ -21,7 +21,7 @@
 }
 
 .introduction h1 { 
-    margin: 5%;
+    margin-inline: 10px;
     padding: 10px;
     font-size: 58px;
     font-family: "Oswald-ExtraLight";
